# FPGA_Gridding

./: CMakeLists.txt  Defines.h  changes.txt  channels_reference.cl  channels_reference.h  gridding_kernels.cl  gridding_kernels_profile.cl  gridding_kernels_tile.cl  kernel_code.cl  main.cpp  oskar_grid_wproj.c  oskar_grid_wproj_cpu.cpp  oskar_grid_wproj_cpu.hpp  oskar_grid_wproj_fpga.cpp  oskar_grid_wproj_fpga.hpp  oskar_grid_wproj_gpu.cu  rearrange_kernels.cpp  rearrange_kernels.hpp
AOCL_UTILS/: aocl_utils.h  opencl.cpp  options.cpp
CL/: cl.h  cl_platform.h
gridding_kernels/reports/lib/: report_data.js
gridding_kernels/reports/lib/json/: area.json  area_src.json  info.json  lmv.json  loops.json  mav.json  summary.json
gridding_kernels_tile/reports/lib/: report_data.js
gridding_kernels_tile/reports/lib/json/: area.json  area_src.json  info.json  lmv.json  loops.json  mav.json  summary.json
reports/lib/: report_data.js
reports/lib/json/: area.json  area_src.json  info.json  lmv.json  loops.json  mav.json  summary.json  warnings.json
